# torchless

./: .gitignore  CMakeLists.txt  HOW_IT_WORKS.md  How it works.md  INVESTIGATION.md  LICENSE  README.md  ROADMAP.md  export_mistral.py  main.cpp  perplexity.sh  perplexity_baseline.json
.github/workflows/: ci.yml
docs/: architecture.md  build-directory.md  f16-optimizations.md  forward-pass.md  model-binary.md
include/: fp16.h  inference_state.h  kernels.h  model_format.h  modules.h  parameters.h  tensor.h  tokenizer.h
include/backend/: kernels.h
include/common/: arena.h  dtype.h  shape.h  tensor.h
include/decode/: sampling.h
include/eval/: perplexity.h
include/loader/: model_load.h
include/model/: inference_state.h  model.h  modules.h
include/tokenizer/: bpe.h  qwen_tokenizer.h
scripts/test/mistral/: goldens.py
src/: main.cpp
src/backend/cpu/: kernels.cpp
src/common/: fp16.cpp  shape.cpp  tensor.cpp  tensor.h
src/decode/: sampling.cpp
src/eval/: perplexity.cpp
src/loader/: model_load.cpp  parameters.cpp
src/model/: inference_state.cpp  model.cpp
src/model/mistral/: modules.cpp
src/tokenizer/: bpe.cpp  qwen_tokenizer.cpp  tokenizer.cpp
test/diag/: int8_matmul_check.cpp  layer_bisect.cpp
test/mistral/: expected.txt  logits_expected.txt  main.cpp  test_cpu_kernels.cpp  test_logits.cpp  test_model_load.cpp  test_modules.cpp  test_tokenizer.cpp
test/mistral/setup/: context.cpp  context.h
test/qwen/: main.cpp  test_model_load.cpp  test_modules.cpp  test_pre_tokenize.cpp  test_tokenizer.cpp
test/qwen/goldens/: L0.inc  stack.inc
test/qwen/setup/: context.cpp  context.h
